src/Components/TodoList.scss
.todo-list {
  position: absolute;
  top: 0;
  left: 0;
  height: calc(100% - 50px);
  width: 100%;

  &>&__add-button {
    position: absolute;
    bottom: 20px;
    right: 20px;
  }

  .list-row {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    &__wrapper {
      width: 100%;
      max-width: 500px;
      display: flex;
      flex-direction: row;
      align-items: left;
      justify-content: center;
    }

    &__id,
    &__title,
    &__button,
    &__description {
      flex: 0 1 auto;
      font-size: 20px;
    }

    &__id,
    &__title,
    &__description {
      padding: 0 5px;
      white-space: nowrap;
    }

    &__title,
    &__description {
      padding: 0 5px;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    &__description {
      flex: 1 1 auto;
    }
  }
}

